[tool.poetry]
name = "gitworkflowtest"
version = "0.1.1"
description = ""
authors = ["nut3219 <wong1904@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
